--- a/web/login.html
+++ b/web/login.html
@@ -6,25 +6,51 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css"/>
+    <script type="text/javascript" src="navbar.js"></script>
 </head>
 <body>
-<article id="log">
-    <h1>Login</h1>
-    <p> Username: <input v-model="username" name="username" type="text" required> </p>
-    <p> Password: <input class="form-control" v-model="password" name="password" type="password" required> </p>
+<div id="log">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-mainbg">
+            <a class="navbar-brand navbar-logo" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars text-white"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
 
-    <!--login-->
-    <section v-if="flag">
-        <button v-on:click="loginfun" type="button">Accedi</button>
-        <p>Non sei ancora registrato? <a v-on:click="cambio" href="#">Clicca qui per farlo!</a></p>
-    </section>
-    <!--sign in-->
-    <section v-else>
-        <button v-on:click="signinfun" type="button">Registrati</button>
-        <p>Sei già registrato?<a v-on:click="cambio" href="#">clicca qui per accedere!</a></p>
-    </section>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html"><i class="far fa-address-book"></i>Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="login.html"><i class="far fa-clone"></i>Accedi</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-</article>
+    <article>
+        <h1>Login</h1>
+        <p> Username: <input v-model="username" name="username" type="text" required> </p>
+        <p> Password: <input class="form-control" v-model="password" name="password" type="password" required> </p>
+
+        <!--login-->
+        <section v-if="flag">
+            <button v-on:click="loginfun" type="button">Accedi</button>
+            <p>Non sei ancora registrato? <a v-on:click="cambio" href="#">Clicca qui per farlo!</a></p>
+        </section>
+        <!--sign in-->
+        <section v-else>
+            <button v-on:click="signinfun" type="button">Registrati</button>
+            <p>Sei già registrato?<a v-on:click="cambio" href="#">clicca qui per accedere!</a></p>
+        </section>
+    </article>
+</div>
 
 
 <script>
