--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
     <header>
 
         <nav class="navbar navbar-expand-lg navbar-mainbg">
-            <a class="navbar-brand navbar-logo" href="#">Navbar</a>
+            <a class="navbar-brand navbar-logo" href="#">LOGO</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars text-white"></i>
             </button>
@@ -26,17 +26,17 @@
                     <li class="nav-item" v-if="logged">
                         <a class="nav-link" href="javascript:void(0);"><i class="fas fa-tachometer-alt"></i>I miei corsi</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="javascript:void(0);"><i class="far fa-address-book"></i>Home</a>
-                    </li>
-                    <li class="nav-item" v-if="!logged">
-                        <a class="nav-link" href="login.html"><i class="far fa-clone"></i>Accedi</a>
-                    </li>
                     <li class="nav-item" v-if="logged">
                         <a class="nav-link" href="admin.html"><i class="far fa-calendar-alt"></i>Admin</a>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="javascript:void(0);"><i class="far fa-address-book"></i>Home</a>
+                    </li>
                     <li class="nav-item" v-if="logged">
                         <a class="nav-link" v-on:click="logout" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Logout</a>
+                    </li>
+                    <li class="nav-item" v-if="!logged">
+                        <a class="nav-link" href="login.html"><i class="far fa-clone"></i>Accedi</a>
                     </li>
                     <!--<li class="nav-item">
                         <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
