Scusate tutti sti commit

--- a/web/index.html
+++ b/web/index.html
@@ -45,21 +45,18 @@
             </div>
         </nav>
 
-        <h1 v-if="logged">Benvenuto {{utente.username}}!</h1>
-        <h1 v-else>Benvenuto!</h1>
+
 
 
     </header>
 
-    <article>
+    <article class="container">
         <!-- tabella Ripetizioni-->
+
+        <h1 v-if="logged">Benvenuto {{utente.username}}!</h1>
+        <h1 v-else>Benvenuto!</h1>
         <section>
-            <p>DAIDAI</p>
-            <p>nome: {{utente.username}}</p>
-            <p>password: {{utente.password}}</p>
-            <p>admin?: {{utente.isAdmin}}</p>
-            <!--<p>sessione -> {{ sessione }}</p>
-            <p>Username -> {{utente.username}}</p>-->
+            <p>nome: {{utente.username}}, password: {{utente.password}}, admin: {{utente.isAdmin}}</p>
             <table class="table table-bordered">
                 <tr>
                     <th scope="col"></th>
