--- a/web/admin.html
+++ b/web/admin.html
@@ -6,16 +6,41 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <title>corsi</title>
+    <title>Admin</title>
+
+    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css"/>
+    <script type="text/javascript" src="navbar.js"></script>
 </head>
-<div id="admin" class="col s12 center">
-    <header>
-        <nav>
-            <a class="nav-link" href="index.html">Home</a>
-        </nav>
-    </header>
+<body>
+<div id="admin">
+    <nav class="navbar navbar-expand-lg navbar-mainbg">
+    <a class="navbar-brand navbar-logo" href="#">LOGO</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fas fa-bars text-white"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
+            <li class="nav-item">
+                <a class="nav-link" href="javascript:void(0);"><i class="fas fa-tachometer-alt"></i>I miei corsi</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="javascript:void(0);"><i class="far fa-calendar-alt"></i>Admin</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="index.html"><i class="far fa-address-book"></i>Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Logout</a>
+            </li>
+            <!--<li class="nav-item">
+                <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
+            </li>-->
+        </ul>
+    </div>
+</nav>
             <!-- corso-->
-    <article>
+    <article class="container">
             <h1>Corsi</h1>
                 <section>
                 <table class="table table-bordered">
@@ -227,10 +252,7 @@
                     });
 
 
-            },
-           /* isLogged:function(){
-                return this.logged;
-            },*/
+            }
         }
     });
 </script>
