--- a/web/index.html
+++ b/web/index.html
@@ -91,7 +91,7 @@
                 password: '',
                 isAdmin: ''
             },
-            link: '/TWEBIUM/MyServlet',
+            link: '/TWEBIUM/LoginServlet',
             link2: '/TWEBIUM/HomeServlet',
             err: null,
             loading: false
