--- a/web/login.html
+++ b/web/login.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css"/>
+    <link rel="stylesheet" type="text/css" href="CSS/stylesheetLog.css"/>
     <script type="text/javascript" src="navbar.js"></script>
 </head>
 <body>
@@ -27,38 +27,63 @@
                         <a class="nav-link" href="index.html"><i class="far fa-address-book"></i>Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="login.html"><i class="far fa-clone"></i>Accedi</a>
+                        <a class="nav-link" href="javascript:void(0);"><i class="far fa-clone"></i>Accedi</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
 
-    <article class="container">
-        <h1>Login</h1>
+    <!--<article class="container">
+        <h1>Prova Login</h1>
         <p> Username: <input class="form-control" v-model="username" name="username" type="text" required> </p>
         <p> Password: <input class="form-control" v-model="password" name="password" type="password" required> </p>
 
-        <!--login-->
+        login
         <section v-if="flag">
             <button v-on:click="loginfun" type="button" class="btn btn-primary">Accedi</button>
             <p>Non sei ancora registrato? <a v-on:click="cambio" href="#">Clicca qui per farlo!</a></p>
         </section>
-        <!--sign in-->
+        sign in
         <section v-else>
             <button v-on:click="signinfun" type="button" class="btn btn-primary">Registrati</button>
             <p>Sei già registrato?<a v-on:click="cambio" href="#">clicca qui per accedere!</a></p>
         </section>
     </article>
+</div>-->
+
+    <div class="wrapper fadeInDown">
+        <div id="formContent">
+            <!-- Tabs Titles -->
+
+            <!-- Icon -->
+            <div class="fadeIn first">
+                <img src="img/icons8-login-64.png" id="ops" alt="User Icon" />
+            </div>
+            <h2 class="active">{{titolo}}</h2>
+
+            <!-- Login Form -->
+            <form onsubmit=";return false">
+                <input type="text" id="login" class="fadeIn second" name="login" placeholder="login" v-model="username">
+                <input type="password" id="password" class="fadeIn third" name="password" placeholder="password" v-model="password">
+                <input v-if="flag" type="submit" class="fadeIn fourth" v-on:click="loginfun" value="Log In">
+                <input v-else type="submit" class="fadeIn fourth" v-on:click="signinfun" value="Sign In">
+            </form>
+
+            <!-- Remind Passowrd -->
+            <div id="formFooter">
+                <p>Non sei ancora Iscritto?</p>
+                <a class="underlineHover" v-on:click="cambio" href="javascript:void(0);">Clicca qui</a>
+            </div>
+
+        </div>
+    </div>
 </div>
-
-
 <script>
     var login = new Vue ({
         el:'#log',
         data:{
-            ruolo:'',
-
+            titolo:'Accedi',
             username:'',
             password:'',
             flag: true,
@@ -69,13 +94,13 @@
                 var self = this;
                 if(self.username.length > 3 && self.password.length > 3) {
                     $.post(this.link, {action: 'login', username: this.username, password: this.password}, function (data) {
-                        data = JSON.parse(data);
+                        data=JSON.parse(data);
                         if (data[0] !== "errore") {
                             //document.getElementById("wrongText").innerText = "";
-                            window.location.replace("index.html");
+                            window.location = "index.html";
                         }else {
                             alert("errore!");
-                            document.getElementById("wrongText").innerText = "Nome utente o password errati";
+                            //document.getElementById("wrongText").innerText = "Nome utente o password errati";
                             self.username = '';
                             self.password = '';
                         }
@@ -94,7 +119,7 @@
                             window.location.replace("index.html");
                         }else {
                             alert("nome già preso");
-                            document.getElementById("wrongText").innerText = "Nome utente già occupato";
+                            //document.getElementById("wrongText").innerText = "Nome utente già occupato";
                             self.username = '';
                             self.password = '';
                         }
@@ -104,7 +129,14 @@
                 }
             },
             cambio: function(){
-                this.flag = !this.flag;
+                self= this;
+                self.flag = !self.flag;
+                if(self.flag){
+                    self.titolo = 'Accedi';
+                }
+                else{
+                    self.titolo = 'Iscriviti';
+                }
             }
         }
     });
