--- a/web/login.html
+++ b/web/login.html
@@ -15,42 +15,26 @@
 <div id="log">
     <header>
         <nav class="navbar navbar-expand-lg navbar-mainbg">
-            <a class="navbar-brand navbar-logo" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars text-white"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
+            <div class="container">
+                <a class="navbar-brand navbar-logo" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-bars text-white"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html"><i class="far fa-address-book"></i>Home</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="javascript:void(0);"><i class="far fa-clone"></i>Accedi</a>
-                    </li>
-                </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html"><i class="far fa-address-book"></i>Home</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="javascript:void(0);"><i class="far fa-clone"></i>Accedi</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
-
-    <!--<article class="container">
-        <h1>Prova Login</h1>
-        <p> Username: <input class="form-control" v-model="username" name="username" type="text" required> </p>
-        <p> Password: <input class="form-control" v-model="password" name="password" type="password" required> </p>
-
-        login
-        <section v-if="flag">
-            <button v-on:click="loginfun" type="button" class="btn btn-primary">Accedi</button>
-            <p>Non sei ancora registrato? <a v-on:click="cambio" href="#">Clicca qui per farlo!</a></p>
-        </section>
-        sign in
-        <section v-else>
-            <button v-on:click="signinfun" type="button" class="btn btn-primary">Registrati</button>
-            <p>Sei già registrato?<a v-on:click="cambio" href="#">clicca qui per accedere!</a></p>
-        </section>
-    </article>
-</div>-->
 
     <div class="wrapper fadeInDown">
         <div id="formContent">
