--- a/web/index.html
+++ b/web/index.html
@@ -14,47 +14,67 @@
 <div id="app">
     <!--barra di navigazione-->
     <header>
-
         <nav class="navbar navbar-expand-lg navbar-mainbg">
-            <a class="navbar-brand navbar-logo" href="#">LOGO</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars text-white"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
-                    <li class="nav-item" v-if="logged">
-                        <a class="nav-link" href="javascript:void(0);"><i class="fas fa-tachometer-alt"></i>I miei corsi</a>
-                    </li>
-                    <li class="nav-item" v-if="logged">
-                        <a class="nav-link" href="admin.html" v-if="utente.isAdmin==1"><i class="far fa-calendar-alt"></i>Admin</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="javascript:void(0);"><i class="far fa-address-book"></i>Home</a>
-                    </li>
-                    <li class="nav-item" v-if="logged">
-                        <a class="nav-link" v-on:click="logout" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Logout</a>
-                    </li>
-                    <li class="nav-item" v-if="!logged">
-                        <a class="nav-link" href="login.html"><i class="far fa-clone"></i>Accedi</a>
-                    </li>
-                    <!--<li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
-                    </li>-->
-                </ul>
+            <div class="container">
+                <a class="navbar-brand navbar-logo" href="#">LOGO</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-bars text-white"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
+                        <li class="nav-item" v-if="logged">
+                            <a class="nav-link" href="prenotazioni.html"><i class="fas fa-tachometer-alt"></i>I miei corsi</a>
+                        </li>
+                        <li class="nav-item" v-if="logged">
+                            <a class="nav-link" href="admin.html" v-if="utente.isAdmin==1"><i class="far fa-calendar-alt"></i>Admin</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="javascript:void(0);"><i class="far fa-address-book"></i>Home</a>
+                        </li>
+                        <li class="nav-item" v-if="logged">
+                            <a class="nav-link" v-on:click="logout" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Logout</a>
+                        </li>
+                        <li class="nav-item" v-if="!logged">
+                            <a class="nav-link" href="login.html"><i class="far fa-clone"></i>Accedi</a>
+                        </li>
+                        <!--<li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
+                        </li>-->
+                    </ul>
+                </div>
             </div>
         </nav>
-
-
-
-
+        <h1 v-if="logged" class="m-3">Benvenuto {{utente.username}}!</h1>
+        <h1 v-else class="m-3">Benvenuto!</h1>
+        <div class="jumbotron card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Others/gradient1.jpg);"> <!--'img/marvin-meyer-SYTO3xs06fU-unsplash.jpg'-->
+            <div class="text-white text-center py-5 px-4">
+                <div>
+                    <h1 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Benvenuto su StudiaOnline.it!</strong></h1>
+                    <h5 class="mx-5 mb-5">Qui potrai prenotare corsi di ripetizione o approfondimento di svariate materie, e per ognuna di esse <br> c'è
+                        la possibilità di scegliere tra più professori appositamente selezionati per le loro capacità di istruire online. <br> Cosa aspetti,
+                        <strong>la prima settimana è gratis!</strong>
+                    </h5>
+                    <a class="btn btn-dark btn-md">Comincia</a>
+                </div>
+            </div>
+        </div>
     </header>
+
+    <!--<div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Hello, world!</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </p>
+        </div>
+    </div>-->
 
     <article class="container">
         <!-- tabella Ripetizioni-->
-
-        <h1 v-if="logged">Benvenuto {{utente.username}}!</h1>
-        <h1 v-else>Benvenuto! </h1>
         <section>
             <p>nome: {{utente.username}}, password: {{utente.password}}, admin: {{utente.isAdmin}}</p>
             <table class="table table-bordered">
