--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css"/>
     <script type="text/javascript" src="navbar.js"></script>
+    <script type="text/javascript" src="footer.js"></script>
+
     <title>Homepage</title>
 </head>
 <body>
@@ -94,6 +96,7 @@
         </section>
 
     </article>
+    <my-footer > </my-footer>
 </div>
 <script>
     var app = new Vue ({
