--- a/web/login.html
+++ b/web/login.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="CSS/stylesheetLog.css"/>
     <script type="text/javascript" src="navbar.js"></script>
+    <script type="text/javascript" src="footer.js"></script>
+
 </head>
 <body>
 <div id="log">
@@ -63,6 +65,7 @@
 
         </div>
     </div>
+    <my-footer></my-footer>
 </div>
 <script>
     var login = new Vue ({
