--- a/web/admin.html
+++ b/web/admin.html
@@ -10,6 +10,9 @@
 
     <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css"/>
     <script type="text/javascript" src="navbar.js"></script>
+    <script type="text/javascript" src="footer.js"></script>
+
+
 </head>
 <body>
 <div id="admin">
@@ -128,6 +131,8 @@
 
     </div>
     </div>
+
+    <my_footer> </my_footer>
 </div>
 <script>
     var admin = new Vue ({
